--- a/sap-2/style.css
+++ b/sap-2/style.css
@@ -69,17 +69,17 @@ position: absolute;
 height: 325px;
 width: 325px;
 top: 1px;
-left: 650px;
+left: 750px;
 
 }
 
 #loja{
 
 display: flex;
-left: 90px;
+left: 140px;
 position: absolute;
-height: 375px;
-width: 900px;
+height: 400px;
+width: 1000px;
 top: 295px;
 
 }
@@ -103,5 +103,39 @@ flex-direction: column;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 color: rgb(5, 52, 204);
 font-size: xx-small;  
-padding-left: 400px;
+padding-left: 600px;
+}
+
+.mais{
+
+background-color: white;
+color: rgb(5, 52, 204);
+border-radius: 50px;
+display: flex;
+position: absolute;
+left: 1250px;
+top: 360px;
+
+}
+
+#processo{
+  left: 70px;
+  top: 700px;
+  width: 1150px;
+position: absolute;
+display: flex;
+height: 230px
+
+}
+
+.texto3{
+
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+color: rgb(5, 52, 204);
+font-size: xx-small;
+padding-left: 20px;
+
 }
