--- a/style.css
+++ b/style.css
@@ -1,114 +1,185 @@
-body {
 
-  background-color: white;
+body{
+
+background-color: white;
 
 }
 
 
-.conteudo-g {
+.conteudo-g{
 
-  width: 1300px;
-  height: 277px;
-  background-color: #CFE0F5;
-  margin: 10px;
-  border-radius: 10px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+width: 1300px;
+height: 277px;
+background-color: #CFE0F5;
+margin: 10px;
+border-radius: 10px;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+display: flex;
+
+
+}
+
+.conteudo-p{
+
+width: 550px;
+height: 277px;
+background-color: #CFE0F5;
+margin: 10px;
+border-radius: 10px;
+
+}
+
+section{
+
+
+display: flex;
+padding: 10px;
+}
+
+#robo{
+
+width: 250px;
+height: 250px;
+}
+
+.texto-intro{
+
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+color: rgb(5, 52, 204);
+font-size: small;
+
+}
+
+.fale{
+
+position: relative;
+height: 100px;
+margin-top: 20px;
+border-radius: 50px;
+margin-right: 200px;
+
+}
+
+#maistabela{
+
+display: flex;
+position: absolute;
+height: 325px;
+width: 325px;
+top: 1px;
+left: 750px;
+
+}
+
+#loja{
+
+display: flex;
+left: 140px;
+position: absolute;
+height: 400px;
+width: 1000px;
+top: 295px;
+
+}
+
+.parte2{
+
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+color: rgb(5, 52, 204);
+font-size: xx-small;
+padding-left: 20px;
+
+}
+
+.part2{
+
   display: flex;
+flex-direction: column;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+color: rgb(5, 52, 204);
+font-size: xx-small;  
+padding-left: 600px;
+}
 
+.mais{
+
+background-color: white;
+color: rgb(5, 52, 204);
+border-radius: 50px;
+display: flex;
+position: absolute;
+left: 1250px;
+top: 360px;
 
 }
 
-.conteudo-p {
-
-  width: 550px;
-  height: 277px;
-  background-color: #CFE0F5;
-  margin: 10px;
-  border-radius: 10px;
-
-}
-
-section {
-  padding: 10px;
-}
-
-#robo {
-
-  width: 250px;
-  height: 250px;
-}
-
-.texto-intro {
-
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: rgb(5, 52, 204);
-  font-size: small;
+#processo{
+  left: 70px;
+  top: 700px;
+  width: 1150px;
+position: absolute;
+display: flex;
+height: 230px
 
 }
 
-.fale {
+.texto3{
 
-  position: relative;
-  height: 100px;
-  margin-top: 20px;
-  border-radius: 50px;
-  margin-right: 200px;
-
-}
-
-#maistabela {
-
-  display: flex;
-  position: absolute;
-  height: 325px;
-  width: 325px;
-  top: 1px;
-  left: 650px;
-
-}
-
-#loja {
-
-  display: flex;
-  left: 90px;
-  position: absolute;
-  height: 375px;
-  width: 900px;
-  top: 295px;
-
-}
-
-.parte2 {
-
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: rgb(5, 52, 204);
   font-size: xx-small;
-  padding-left: 20px;
+display: flex;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+color: rgb(5, 52, 204);
+padding-left: 20px;
 
 }
 
-.part2 {
+.imagem{
+  width: 140px;
+     height: 140px;
+ display: flex;
+    padding: 10px;
+    background-color: white;
+    border-radius: 15px;
+    margin: 10px;
+    gap: 10px;
+    text-align: center
+    
 
-  display: flex;
-  flex-direction: column;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: rgb(5, 52, 204);
-  font-size: xx-small;
-  padding-left: 400px;
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #botao {
   display: flex;
-  
+
 
 }
-#doc_cima{
+
+#doc_cima {
   margin-top: 20px;
   padding: 5px;
   background-color: #d6d6d6;
