--- a/style.css
+++ b/style.css
@@ -156,6 +156,43 @@ padding-left: 20px;
 
 }
 
+#div3{
+    color: black;
+    background-color:#CFE0F5;
+    align-items: center;
+    border: 0px;
+    padding: 5px;
+    border-radius: 15px;
+}
+
+#lado{
+    text-align: center;
+    display: flex;
+    gap: 40px;
+    color: black;
+}
+
+#cor{
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+}
+
+#teste1{
+    color: black;
+    display: flex;
+    justify-content: space-between;
+}
+
+#lado2{
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    padding-right: 600px;
+    color: black;
+    margin: 15px;
+    border-radius: 15px;
+
+}
 
 
 
